--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+//123
 <!doctype html>
 <html>
   <head>
@@ -8,7 +9,7 @@
   <body>
     <script>
    
-var makeGitterChat = require('./index.js')   
+var makeLinkUrl = require('./index.js')   
 var bel = require('bel')
 var csjs = require('csjs-inject')
   
@@ -136,7 +137,7 @@ function profile () {
   var codepen           = `https://codepen.io/${username}`
   
   
-  
+  var gitter           = makeLinkUrl (username)
 // HTML
   var cardContainer = bel`
     <div class=${css.cardContainer}>
@@ -155,12 +156,13 @@ function profile () {
                     CARD EVENT LISTENERS
   ---------------------------------------------------------- */
   /* --------------- hover & unhover the card ---------------*/
-  
   var cardContainer_hover =
+       bel`
+    <div class=${css.cardContainer_hover}>
+      <div class=${css.cardGitterChat} ><iframe class=${css.iframe} src=${ gitter}></iframe></div>
+      `
       bel`
-    
-    <div class=${css.cardContainer_hover}>    
-              ${makeGitterChat(username) }
+    <div class=${css.cardContainer_hover}>      
       <div class=${css.cardSocial}>
         <a href=${twitter} target='_blank'>
           <i class="${css.cardSocial_fontawesome} fa fa-twitter" aria-hidden="true"></i></a>
@@ -174,13 +176,12 @@ function profile () {
       <div class=${css.cardText}>${cardText}</div>
     </div>
   `
+  
   function hoverCard (event) {
-   
     el.appendChild(cardContainer_hover)
     el.removeChild(cardContainer)
   }
   function unhoverCard (event) {
- 
     el.removeChild(cardContainer_hover)
     el.appendChild(cardContainer)
   }
